// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TicketStatus component closed ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <Button
    className="headerButton font-weight-medium closed"
    color="success"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="icon material-icons md-3"
    >
      check
    </i>
  </Button>
  <Tooltip
    placement="bottom"
    target="change-status-button"
  >
    Reopen (press O)
  </Tooltip>
</div>
`;

exports[`TicketStatus component open ticket 1`] = `
<div
  className="d-inline-block mr-2"
>
  <Button
    className="headerButton font-weight-medium"
    color="secondary"
    id="change-status-button"
    onClick={[Function]}
    tag="button"
    type="button"
  >
    <i
      className="icon material-icons md-2 mr-1"
    >
      check
    </i>
    <span>
      Close
    </span>
  </Button>
  <Tooltip
    placement="bottom"
    target="change-status-button"
  >
    Close (press C)
  </Tooltip>
</div>
`;
